RESOLVED FIXED261119
WebCodecs VP9 encoder should not trigger IPC to GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=261119
Summary WebCodecs VP9 encoder should not trigger IPC to GPUProcess
youenn fablet
Reported 2023-09-04 09:54:21 PDT
WebCodecs VP9 encoder should not trigger IPC to GPUProcess
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-04 09:54:40 PDT
youenn fablet
Comment 2 2023-09-04 23:35:50 PDT
EWS
Comment 3 2023-09-06 10:00:29 PDT
Committed 267678@main (21b392062a29): <https://commits.webkit.org/267678@main> Reviewed commits have been landed. Closing PR #17421 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.