WebCodecs VP9 encoder should not trigger IPC to GPUProcess https://bugs.webkit.org/show_bug.cgi?id=261119 rdar://114941227

Reviewed by Eric Carlson.

HW VP9 support is limited to decoders not encoders.
We introduce videoEncoderTypeFromWebCodec whcih restricts remote video encoders in GPUProcess to H264 and H265.

* Source/WebKit/WebProcess/GPU/media/RemoteVideoCodecFactory.cpp:
(WebKit::RemoteVideoCodecFactory::createDecoder):
(WebKit::RemoteVideoCodecFactory::createEncoder):
* Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:
(WebKit::LibWebRTCCodecs::videoEncoderTypeFromWebCodec):
* Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.h:

Canonical link: https://commits.webkit.org/267678@main